Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2015-02-20 (SVN):
    * changed version date stamp to 2015-02-20.

2015-02-14 (SVN):
    * timidity: surround the struct _MidSample:low_vel and high_vel
      stuff with TIMIDITY_USE_DLS ifdefs.
    * timidity: fix resampler crashes (e.g. in rs_loop()) with broken
      situations.
    * timidity, resample.c (rs_plain): PRECALC_LOOPS counter bug fix.
      from timidity++-2.8.0 (1999-11-19 Masanao Izumo <mo@goice.co.jp>)
      Original form: i = (le - ofs) / incr + 1;        (Original)
      Fixed form:    i = (le - ofs + incr - 1) / incr; (Correct)

2014-11-28 (SVN):
    * q_endian.h: add WORDS_BIGENDIAN macro for autotools compatibility.
    * libs, timidity: sync with libTiMidity fork at
      https://github.com/sezero/libtimidity/
    * bumped the version date stamp to 2014-10-28.

2014-11-21/27 (SVN):
    * oslibs (macosx, windows): recompiled the FLAC decoder with
      CVE-2014-8962 and CVE-2014-9028 fixes applied from mainstream.

2014-11-22 (SVN):
    * gl_screen.c (SCR_ScreenShot_f): make sure we don't Sys_Error()
      due to buffer allocation failures.
    * bumped the version date stamp to 2014-11-22.

2014-10-20 (SVN):
    * fix issues on Windows systems with DPI scaling.
    * bumped the version date stamp to 2014-10-20.

2014-10-18 (SVN):
    * make sure that SDL_Quit() is called upon exit.

2014-10-10 (SVN):
    * engine/h2shared/common.c: override the stock djgpp versions of
      stricmp and strnicmp by our own q_strcasecmp and q_strncasecmp.
    * bumped the version date stamp to 2014-10-10.

2014-08-25 (SVN):
    * Revert Pa3PyX solution for cross-map demos, apply Baker's fix
      instead (http://forums.inside3d.com/viewtopic.php?f=3&t=2397).

2014-07-01 (SVN):
    * move MAX_OSPATH definition to q_stdinc.h. define it as PATH_MAX,
      or as MAXPATHLEN, _MAX_PATH, MAX_PATH, or CCHMAXPATH if either of